--- a/ops/environments/.env.common.template
+++ b/ops/environments/.env.common.template
@@ -17,15 +17,13 @@ SYSTEM_GIT_EMAIL=worker@computor.local
 # ============================================
 # DATABASE CONFIGURATION
 # ============================================
-# Main PostgreSQL database (shared by Computor and Coder if enabled)
+# Main PostgreSQL database
 POSTGRES_HOST=postgres
 POSTGRES_PORT=5437
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=CHANGE_ME_STRONG_PASSWORD
 POSTGRES_DB=computor
 POSTGRES_EXTERNAL_PORT=5432
-# Multiple databases (computor is always created, coder added if CODER_ENABLED=true)
-POSTGRES_MULTIPLE_DATABASES=computor
 
 # Temporal PostgreSQL database (separate instance)
 TEMPORAL_POSTGRES_PASSWORD=temporal
@@ -114,6 +112,10 @@ MATLAB_BASE_IMAGE=matlab-base:latest
 # ============================================
 # Set to true to enable Coder workspace management
 CODER_ENABLED=false
+
+# Coder PostgreSQL database (separate from main DB)
+CODER_POSTGRES_USER=coder
+CODER_POSTGRES_PASSWORD=CHANGE_ME_CODER_DB_PASSWORD
 
 # Coder admin credentials
 CODER_ADMIN_USERNAME=admin
