feat: host mapping for dev mode (local gitlab)

--- a/computor-coder/deployment/templates/python3.13/Dockerfile
+++ b/computor-coder/deployment/templates/python3.13/Dockerfile
@@ -47,6 +47,7 @@ RUN apt-get update && apt-get install -y \
     wget \
     curl \
     git \
+    socat \
     && rm -rf /var/lib/apt/lists/*
 
 # Install Python 3.13 from source
