--- a/ops/environments/.env.common.template
+++ b/ops/environments/.env.common.template
@@ -170,3 +170,8 @@ TEST_GITLAB_GROUP_ID=
 # ============================================
 DEBUG_MODE=development
 DISABLE_API_DEBUG_INFO=false
+
+# Dev-only: forward these localhost ports to host.docker.internal inside workspace containers
+# Useful when workspace containers need to reach services on the host (e.g. GitLab)
+# Comma-separated list of ports (empty = disabled, ignored in production)
+# DEV_FORWARD_PORTS=8084
