--- a/computor-coder/deployment/templates/matlab/Dockerfile
+++ b/computor-coder/deployment/templates/matlab/Dockerfile
@@ -36,6 +36,7 @@ RUN apt-get update && apt-get install -y \
     curl \
     git \
     wget \
+    socat \
     && rm -rf /var/lib/apt/lists/*
 
 # Install code-server
