--- a/ops/environments/.env.common.template
+++ b/ops/environments/.env.common.template
@@ -72,9 +72,17 @@ API_URL=http://localhost:8000
 API_ADMIN_USER=admin
 API_ADMIN_PASSWORD=CHANGE_ME_ADMIN_PASSWORD
 
-# Frontend URL
+# ============================================
+# WEB FRONTEND (computor-web)
+# ============================================
+# Backend API URL exposed to the browser
 NEXT_PUBLIC_API_URL=http://localhost:8000
-COMPUTOR_WEB_VERSION=main
+
+# Docker build settings
+COMPUTOR_WEB_IMAGE_NAME=computor-web
+COMPUTOR_WEB_IMAGE_TAG=latest
+COMPUTOR_WEB_REGISTRY=
+COMPUTOR_WEB_PORT=3000
 
 # ============================================
 # SECURITY TOKENS
@@ -138,6 +146,10 @@ CODER_TELEMETRY_ENABLE=false
 CODER_URL=http://localhost:7080
 # Traefik base URL for workspace access (code-server via /coder/{user}/{workspace}/)
 CODER_WORKSPACE_BASE_URL=http://localhost:8080/coder
+
+# Backend URL that workspace containers use to reach the API
+# Dev: http://host.docker.internal:8000, Prod: http://localhost:8080/api (or your domain)
+BACKEND_EXTERNAL_URL_PROD=http://localhost:8080/api
 
 # ============================================
 # EXTENSION CONFIGURATION
