--- a/computor-backend/pyproject.toml
+++ b/computor-backend/pyproject.toml
@@ -27,6 +27,7 @@ dependencies = [
     "openpyxl==3.1.2",
     "python-gitlab==5.0.0",
     "pydantic==2.11.0",
+    "pydantic-settings>=2.0.0",
     "pydantic_yaml==1.2.1",
     "PyYAML==6.0.1",
     "email-validator==2.1.0",
