update: env template

--- a/ops/environments/.env.common.template
+++ b/ops/environments/.env.common.template
@@ -130,6 +130,9 @@ CODER_ADMIN_USERNAME=admin
 CODER_ADMIN_EMAIL=admin@example.com
 CODER_ADMIN_PASSWORD=CHANGE_ME_CODER_PASSWORD
 
+# Admin API secret for Traefik-protected endpoints (generate with: openssl rand -hex 32)
+CODER_ADMIN_API_SECRET=CHANGE_ME_GENERATE_WITH_OPENSSL
+
 # Docker configuration (auto-detected by startup.sh if empty)
 DOCKER_GID=
 
