--- a/ops/docker/docker-compose.base.yaml
+++ b/ops/docker/docker-compose.base.yaml
@@ -7,16 +7,6 @@ networks:
     name: computor-network
     driver: bridge
 
-volumes:
-  postgres_data:
-    name: computor-postgres-data
-  temporal_postgres_data:
-    name: computor-temporal-postgres-data
-  redis_data:
-    name: computor-redis-data
-  minio_data:
-    name: computor-minio-data
-
 services:
   # Single Traefik instance for all routing
   traefik:
@@ -44,7 +34,7 @@ services:
     ports:
       - "${POSTGRES_EXTERNAL_PORT:-5432}:5437"
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - ${SYSTEM_DEPLOYMENT_PATH}/postgres:/var/lib/postgresql/data
       - ../../docker/postgres-init:/docker-entrypoint-initdb.d:ro
     environment:
       TZ: UTC
@@ -71,7 +61,7 @@ services:
     command: redis-server --save 20 1 --loglevel warning --requirepass ${REDIS_PASSWORD}
     volumes:
       - ${SYSTEM_DEPLOYMENT_PATH}/redis:/usr/local/etc/redis
-      - redis_data:/data
+      - ${SYSTEM_DEPLOYMENT_PATH}/redis-data:/data
     healthcheck:
       test: ["CMD", "redis-cli", "--raw", "incr", "ping"]
       interval: 5s
@@ -88,7 +78,7 @@ services:
     ports:
       - "${TEMPORAL_POSTGRES_PORT:-5433}:5433"
     volumes:
-      - temporal_postgres_data:/var/lib/postgresql/data
+      - ${SYSTEM_DEPLOYMENT_PATH}/temporal-postgres:/var/lib/postgresql/data
     environment:
       TZ: UTC
       POSTGRES_USER: temporal
@@ -141,7 +131,7 @@ services:
       - "127.0.0.1:${MINIO_API_PORT:-9000}:9000"
       - "127.0.0.1:${MINIO_CONSOLE_PORT:-9001}:9001"
     volumes:
-      - minio_data:/data
+      - ${SYSTEM_DEPLOYMENT_PATH}/minio/data:/data
     environment:
       MINIO_ROOT_USER: ${MINIO_ROOT_USER:-minioadmin}
       MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD:-minioadmin}
